# FibreSight

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
examples/: fibre_enhancement.ipynb
examples/images/: partition.tiff
fibsight/: __init__.py  _version.py
fibsight/custom/: config_template.py
fibsight/graphs/: attributes_factory.py  process.py  prune.py  tortuosity.py
fibsight/pipeline/: characterise.py
fibsight/skeletonisation/: __init__.py  factory.py  skel_factory.py  skeleton_methods.py
fibsight/statistics/: factory.py  score.py  statistic.py  statistics_utils.py
fibsight/texture/: _utils.py  gabor.py  texture_utils.py
fibsight/thresholding/: factory.py  thresholding_factory.py  thresholding_methods.py
fibsight/utils/: __init__.py  decorators.py
tests/: classify_points_right_left_test.py
